<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".MainActivity">


        <item
            android:id="@+id/action_brush"
            android:title="@string/action_brush"
            android:icon="@drawable/ic_action_brush"
            app:showAsAction="always" />

        <item
            android:id="@+id/action_save"
            android:title="@string/action_save"
            android:icon="@drawable/ic_action_save"
            app:showAsAction="always" />
        <item
            android:id="@+id/action_share"
            android:title="@string/action_share"
            android:icon="@drawable/ic_action_share"
            app:showAsAction="always" />
        <item
            android:id="@+id/action_camera"
            android:title="@string/action_camera"
            android:icon="@drawable/ic_action_camera"
            app:showAsAction="always" />
        <item
            android:id="@+id/action_gallery"
            android:title="@string/action_gallery"
            android:icon="@drawable/ic_action_picture"
            app:showAsAction="always" />



</menu>